# IB-Junio-2021

./: README.md
ej03/: switch_case.cc
ej03.1/: makefile  switch_case.cc
ej03.2/: CMakeLists.txt
ej03.2/src/: switch-case.cc  switch-case.h  switch-case_main.cc  tools.cc  tools.h
ej04/: CMakeLists.txt  caja  caja.h  caja_main.cc  makefile
ej04/src/: caja.cc  caja.h  caja_main.cc  tools.cc  tools.h
